--- a/web.config
+++ b/web.config
@@ -1,6 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <configuration>
-    <system.webServer>
-        <httpRedirect enabled="false" />
-    </system.webServer>
+  <system.webServer>
+    <httpRedirect enabled="false"/>
+  </system.webServer>
+  <system.web>
+    <compilation debug="true"/>
+  </system.web>
 </configuration>
